--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <tr>
                 <th style="width:30%">Name</th>
                 <td>MUHAMAD AKMAL IRFAN BIN LOKMAN</td>
-                <th><img src="C:\Users\akmal\OneDrive\Pictures\Akmal Irfan\Akmal irfan.jpg"></th>
+                <th><img src="https://github.com/akmalirfan28/lab_2/assets/148061856/90902dcf-ff50-41d0-8a7f-a689b6faafc1"></th>
             </tr>
             <tr>
                 <th>Date of birth</th>
